<resources>
    <string name="app_name">YuNotes</string>
    <string name="yu_notes">YuNotes</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirmPassword">Confirm Password</string>
    <string name="img">logo</string>
    <string name="txt_login">LOGIN</string>
    <string name="txt_register">REGISTER</string>
    <string name="txt_KetRegister">Do not have account yet?</string>
    <string name="txt_CreateAccount">Sign Up</string>
    <string name="txt_KetLogin">Have an account?</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_password">Enter Password</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="txt_Copyright">© Copyright YuNotes 2021. All Right Reserved</string>
    <string name="search_notes">Search notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here...</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">ADD</string>
    <string name="cancel_dialog">CANCEL</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete_note_message">Are you sure you want to delete this note?</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_delete_account">Delete Account</string>
    <string name="txt_choose_the_actions">Choose the Actions</string>
    <string name="txt_edit_account">Edit Account</string>
</resources>