<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#181818"
    android:orientation="vertical"
    tools:context=".activity.EditAccount">

    <ImageView
        android:id="@+id/backImage"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginLeft="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_12sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_arrow_left"
        app:tint="@color/colorIcons" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="@dimen/_20sdp"
        android:includeFontPadding="false"
        android:text="@string/txt_edit_account"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textSize="@dimen/_18ssp"/>

    <LinearLayout
        android:id="@+id/layoutEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#212529"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp">

            <ImageView
                android:id="@+id/imageName"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_person"
                app:tint="@color/colorIcons"/>

            <LinearLayout
                android:id="@+id/layoutUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:gravity="center_vertical"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:includeFontPadding="false"
                    android:text="@string/hint_name"
                    android:textColor="@color/colorIcons"
                    android:textSize="@dimen/_12ssp"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEditName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:includeFontPadding="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    android:ems="11"
                    android:textColorHint="@color/colorTextHint"
                    android:importantForAutofill="no"
                    app:backgroundTint="@color/white"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp">

            <ImageView
                android:id="@+id/imagePhone"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_email"
                android:layout_marginTop="@dimen/_50sdp"
                app:tint="@color/colorIcons"/>

            <LinearLayout
                android:id="@+id/layoutPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_37sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:gravity="center_vertical"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:includeFontPadding="false"
                    android:text="@string/hint_email"
                    android:textColor="@color/colorIcons"
                    android:textSize="@dimen/_12ssp"/>


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEditEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:includeFontPadding="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    android:ems="11"
                    android:textColorHint="@color/colorTextHint"
                    android:importantForAutofill="no"
                    app:backgroundTint="@color/white"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp">


            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_key"
                android:layout_marginTop="@dimen/_50sdp"
                app:tint="@color/colorIcons"
                app:layout_constraintTop_toBottomOf="@id/imagePhone"
                app:layout_constraintStart_toStartOf="@id/imagePhone"/>

            <LinearLayout
                android:id="@+id/layoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_38sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:gravity="center_vertical"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:includeFontPadding="false"
                    android:text="@string/hint_password"
                    android:textColor="@color/colorIcons"
                    android:textSize="@dimen/_12ssp"/>


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEditPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:ems="11"
                    android:fontFamily="@font/poppins_medium"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:textColor="@color/white"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="@dimen/_12ssp"
                    app:backgroundTint="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_edit_account"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/ic_edit"
        android:background="@drawable/back_button_login_register"
        app:backgroundTint="#24252A" />

</LinearLayout>